--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
             </tbody>
         </table>
     </div>
+    <div class="container mt-5">
+        <form action="" id="form" class="form-inline mx-sm-3">
+            <input type="text" name="id" id="id" class="form-control" placeholder="write ID here">
+            <input type="submit" value="Submit" class="btn btn-primary ml-2">
+        </form>
+        <div id="result" class="mt-3">
 
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
